# cxx-cmake-example

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  shell.nix
.github/workflows/: ci-nix.yml  ci.yml
rust_part/: CMakeLists.txt  Cargo.toml
rust_part/src/: lib.rs
