[package]
name = "rust_part"
version = "0.1.0"
authors = ["Xiangpeng Hao <haoxiangpeng123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]
